<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_etudiant"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:elevation="15dp"
        android:contentDescription="@string/PE"/>

    <Button
        android:id="@+id/btn_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:layout_gravity="center"
        android:background="@drawable/btn"
        android:elevation="8dp"
        android:text="@string/BPE"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textSize="20sp"
        android:padding="4dp"
        android:textStyle="bold"
        android:id="@+id/textNom" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColorHint="#757575"
        android:hint="@string/hintNom"
        android:background="@drawable/edit_text_style"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:textSize="20sp"
        android:padding="4dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:id="@+id/textPrenom" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColorHint="#757575"
        android:hint="@string/hintprenom"
        android:autofillHints="prenom"
        android:background="@drawable/edit_text_style"
        android:id="@+id/prenom" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DN"
        android:textSize="20sp"
        android:padding="4dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:id="@+id/TextDate" />

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">

  <TextView
      android:id="@+id/date_naissance"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="2"
      android:text="@string/HDN"
      android:textSize="17sp"
      android:padding="8dp"
      android:background="#EEEEEE"/>

  <Button
      android:id="@+id/btn_select_date"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:text="@string/BC"
      android:layout_marginStart="8dp"/>
 </LinearLayout>

 <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/ajout"
     android:id="@+id/bn"
     android:layout_gravity="center_horizontal"
     android:layout_marginTop="16dp" />

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textSize="20sp"
     android:padding="4dp"
     android:textStyle="bold"
     android:text="@string/ID"
     android:id="@+id/textId"
     android:layout_marginTop="16dp" />

 <EditText
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:inputType="numberSigned"
     android:textColorHint="#757575"
     android:autofillHints="id"
     android:hint="@string/hintID"
     android:background="@drawable/edit_text_style"
     android:id="@+id/id" />
<LinearLayout
    android:layout_width="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/Chercher"
     android:id="@+id/load"
     android:layout_marginTop="16dp"
     android:layout_marginRight="10dp"
     android:layout_gravity="center_horizontal" />
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/supprimer"
     android:id="@+id/delete"
     android:layout_marginTop="16dp"
     android:layout_gravity="center_horizontal" />
</LinearLayout>



 <TextView
     android:id="@+id/res"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />



 <Button
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/afficher"
     android:id="@+id/viewTable"
     android:layout_marginTop="20dp" />



</LinearLayout>